<resources>
    <string name="app_name">GeofenceApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- DEVELOPER MODE STRINGS -->
    <string name="developer_mode_toast_message">Application is running in developer mode.</string>

    <!-- COMMON STRING VALUES FOR ALERT DIALOG, TEXT VIEW, BUTTONS AND MENUS -->
    <string name="common_delete">Delete</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_open">Open</string>
    <string name="common_save">Save</string>
    <string name="common_update">Update</string>
    <string name="common_upload">Upload</string>
    <string name="common_category">Category</string>
    <string name="common_exit">Exit</string>
    <string name="common_retry">Retry</string>
    <string name="common_ignore">Ignore</string>
    <string name="common_location_services">Location Services</string>

    <!-- COMMON TOAST MESSAGES AND ERROR CODES/DESCRIPTION -->
    <string name="common_error">Error has occurred</string>
    <string name="common_error_delete_geofence">Delete Geofence</string>
    <string name="common_error_delete_geofence_message">Are you sure you want to delete this Geofence? You cannot undo this process.</string>
    <string name="common_error_no_internet_connection_title">No Internet Connection</string>
    <string name="common_error_no_internet_connection_message">Internet is required to use this app. Please check if your Wi-Fi or 3G/LTE connection is turned on.</string>
    <string name="common_error_location_services_disabled">Location Services is disabled</string>
    <string name="common_error_location_services_message">This app will not be functional without Location Services. Please check your Location Service settings.</string>
    <string name="common_toast_geofence_icon_update">Geofence icon updated</string>
    <string name="common_toast_geofence_cover_update">Geofence cover updated</string>
    <string name="common_toast_geofence_update">Geofence has been updated</string>
    <string name="common_toast_geofence_deleted">Geofence has been deleted</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_activity_welcome_user">Welcome back, </string>
    <string name="main_activity_create_geofence">Create Geofence</string>
    <string name="main_activity_zoom_level_city">City</string>
    <string name="main_activity_zoom_level_street">Street</string>
    <string name="main_activity_zoom_level_building">Building</string>
    <string name="main_activity_set_building_enabled">3D Buildings enabled.</string>
    <string name="main_activity_set_building_disabled">3D Buildings disabled.</string>
    <string name="main_activity_create_new_geofence">Create New Geofence</string>

    <!-- GEOFENCE MAIN ACTIVITY ERROR -->
    <string name="geofence_error_too_far">Geofence is too far from your location</string>
    <string name="geofence_error_not_near">You are not inside a Geofence</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_nearby_geofence">Nearby Geofences</string>
    <string name="navigation_drawer_manage_geofence">Manage Geofence</string>
    <string name="navigation_drawer_report">Report</string>
    <string name="navigation_drawer_title_account_and_settings">ACCOUNT AND SETTINGS</string>
    <string name="navigation_drawer_login">Login</string>
    <string name="navigation_drawer_sign_out">Sign out</string>
    <string name="navigation_drawer_title_developer_tools">DEVELOPER TOOLS</string>
    <string name="navigation_drawer_title_about">ABOUT</string>
    <string name="navigation_drawer_third_party_software">Third-party software</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- STRING VALUES FOR GEOFENCE CONTENT MODULE -->
    <string name="geofence_content_module_description">Description</string>
    <string name="geofence_content_module_information">Information</string>
    <string name="geofence_content_module_no_description">No description has been specified</string>
    <string name="geofence_content_module_no_email">No email has been specified</string>
    <string name="geofence_content_module_no_phone">No phone number has been specified</string>
    <string name="geofence_content_module_no_category">No category has been specified</string>
    <string name="geofence_content_module_no_address">No address has been specified</string>
    <string name="geofence_content_module_review">Review</string>
    <string name="geofence_content_module_review_see_all">See all Reviews</string>
    <string name="geofence_content_module_review_submit">Write a Review</string>

    <!-- REPORT MODULE STRING -->
    <string name="report_subject_line">Report: </string>
    <string name="report_subject_geofence_id">Geofence ID: </string>
    <string name="report_subject_general_feedback">[Feedback] General feedback</string>
    <string name="report_subject_suspicious_location">[Suspicious] Suspicious location</string>
    <string name="report_subject_abuse_spam">[Other] Abuse, spam, or duplicate</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_new_geofence">Create New Geofence</string>

    <!-- GEOFENCE STRINGS -->

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error and app dialog strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>


    <string name="geofence_added_successfully">Geofence added successfully.</string>

    <string name="error_server_not_available_title">
        Server unavailable
    </string>

    <string name="error_server_not_available_message">
        The server you are trying to access is not available. Please try again later.
    </string>

    <!-- User account type messages -->

    <string name="sign_out_developer_mode">
        You cannot sign out while in developer mode. Well played.
    </string>

    <string name="dialog_developer_mode_enabled">
    </string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="TextFieldBlank_username">Username field cannot be blank.</string>
    <string name="TextFieldBlank_password">Password field cannot be blank.</string>
    <string name="TextFieldBlank_email">Email field cannot be blank.</string>

    <!-- FEEDBACK TOOL SPINNER ENTRIES -->
    <string-array name="geofence_feedback">
        <item>General Feedback</item>
        <item>Suspicious Location</item>
        <item>Abuse, Spam, or Duplicate</item>
    </string-array>

    <!-- DIALOG_CREATE_GEOFENCE SPINNER ENTRIES -->
    <string-array name="geofence_category">
        <item>Airport</item>
        <item>Automotive</item>
        <item>Convenience Store</item>
        <item>Events</item>
        <item>Food and Restaurants</item>
        <item>Information</item>
        <item>Retail</item>
        <item>School</item>
        <item>Shopping Mall</item>
        <item>Tourism</item>
        <item>Train Station</item>

    </string-array>
    <string name="title_activity_about_geofence_web_view">AboutGeofenceWebView</string>

    <!-- GPS coordinates error -->
    <string name="no_gps_coordinates_found">GPS coordinates not available.</string>


</resources>
